@@ -8,10 +8,12 @@ setClass("gCheckbox",
 
 ##' constructor for checkbox widget
 gcheckbox =function(
-  text, checked = FALSE, handler = NULL, action = NULL,      container = NULL, ... ,
+  text, checked = FALSE, use.togglebutton=FALSE, handler = NULL, action = NULL, container = NULL, ... ,
   toolkit=guiToolkit()){
   widget =  .gcheckbox (toolkit,
-    text=text, checked=checked, handler=handler, action=action, container=container, ...
+    text=text, checked=checked,
+    use.togglebutton=use.togglebutton,
+    handler=handler, action=action, container=container, ...
     )
   obj = new( 'gCheckbox',widget=widget,toolkit=toolkit) 
   return(obj)
@@ -20,6 +22,6 @@ gcheckbox =function(
 
 ##' Generic for toolkit dispatch
 setGeneric( '.gcheckbox' , function(toolkit,
-                                    text, checked = FALSE, handler = NULL, action = NULL,
+                                    text, checked = FALSE, use.togglebutton=FALSE, handler = NULL, action = NULL,
                                     container = NULL, ... ) standardGeneric( '.gcheckbox' ))
 
