@@ -1,3 +1,12 @@
+2010-10-17  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gcheckbox.R: added use.togglebutton argument to use toggle
+	button in place of checkbox
+
+2010-10-15  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gcommandline.R: updated this widget, works better with Qt, tcltk
+
 2010-10-10  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gcheckbox.R: added ... to gcheckbox!
